# audio-data-poisoning

./: .gitignore  README.md  pyproject.toml
audio-data-poisoning/audio-nightshade/: data_extractor.py
audio-data-poisoning/common/: audio_loader.py  clap.py  pipeline.py  vocoder.py
audio-data-poisoning/dirty-label/: dirtylabel_notebook.ipynb  label_mismatcher.py
audio_data_poisoning/: main.py
audio_data_poisoning/audio_nightshade/: audioldm_prompter.py  dataset_filter.py  nightshade_notebook.ipynb  poison_generator.py
audio_data_poisoning/common/: audio_loader.py  utils.py
audio_data_poisoning/dirty_label/: dataset_filter.py
audio_data_poisoning/models/: audio_ldm.py  base_model.py  clap.py
