[project]
name = "audio_data_poisoning"
version = "0.1.0"
description = ""
authors = [
    {name = "Mateusz Tobiasz",email = "mati11.2001@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy (>=2.4.3,<3.0.0)",
    "peft (>=0.18.1,<0.19.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "torch (>=2.11.0,<3.0.0)",
    "torchvision (>=0.26.0,<0.27.0)",
    "torchaudio (>=2.11.0,<3.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "yt-dlp (>=2026.3.17,<2027.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
