[tool.poetry]
name = "audio_data_poisoning"
version = "0.1.0"
description = ""
authors = ["Mateusz Tobiasz <mati11.2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = ">=2.4.3,<3.0.0"
peft = ">=0.18.1,<0.19.0"
soundfile = ">=0.13.1,<0.14.0"
librosa = ">=0.11.0,<0.12.0"
matplotlib = ">=3.10.8,<4.0.0"
pandas = ">=3.0.1,<4.0.0"
yt-dlp = ">=2026.3.17,<2027.0.0"
transformers = ">=5.5.0,<6.0.0"
diffusers = ">=0.37.1,<0.38.0"
torch = {version = "2.11.0", source = "pytorch"}
torchvision = {version = "0.26.0", source = "pytorch"}
torchaudio = {version = "2.11.0", source = "pytorch"}

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"